--- a/project/templates/neverever/index.html
+++ b/project/templates/neverever/index.html
@@ -9,7 +9,7 @@
 {% block body_block %}
 
 <div class="page-header text-center">
-    <h1>Never Ever</h1>
+    <h1>never/<b>ever</b></h1>
     <p class="lead">Play never have I ever. Wherever you are.</p>
 </div>
 
@@ -24,7 +24,7 @@
 </div>
 </div>
 
-<footer class="footer footer-main">
+<footer class="footer">
   <div class="container text-center">
     <p class="text-muted">Currently, there
         {% if nSessions %}
