--- a/project/static/css/index.css
+++ b/project/static/css/index.css
@@ -1,5 +1,15 @@
 body{
-	background:url('../img/index_banner.png') no-repeat center center;
+	background:url('../img/index_banner.jpg') no-repeat center center;
 	min-height:100%;
 	background-size:cover;
+}
+
+.navbar {
+   margin-bottom: 0px;
+}
+
+.page-header {
+    margin-top: 0px;
+    padding: 15px 0 20px 0;
+    background-color:rgba(51,51,51,0.6);
 }
