--- a/project/templates/neverever/baseTemplate.html
+++ b/project/templates/neverever/baseTemplate.html
@@ -53,7 +53,7 @@
         </div>
       </div>
     </div>
-	<div class="row-fluid text-center" id="content">
+	<div class="text-center" id="content">
 			{% block body_block %}{% endblock %}
 	</div>
 
