forgot to add baseTemplate sorry. now it should work but see comment

--- a/project/templates/neverever/baseTemplate.html
+++ b/project/templates/neverever/baseTemplate.html
@@ -64,5 +64,7 @@
 	<script src="{% static "js/bootstrap.min.js" %}"></script>
 	<!-- Toggle -->
 	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
+
+  <script src="{% static "js/neverever-ajax.js" %}"></script>
   </body>
 </html>
