--- a/project/templates/neverever/index.html
+++ b/project/templates/neverever/index.html
@@ -26,20 +26,22 @@
 
 <footer class="footer">
   <div class="container text-center">
-    <p class="text-muted">Currently, there
-        {% if nSessions %}
-            {% if nSessions > 1 %}are{% else %}is{% endif %}
-            {{ nSessions }} active session{% if nSessions > 1 %}s{% endif %}
-        {% else %}
-            No active sessions
-        {% endif %}
-            , with
-        {% if nPlayers %}
-            {{ nPlayers }} player{% if nPlayers > 1 %}s{% endif %}.
-        {% else %}
-            no players. :(
-        {% endif %}
-    </p>
+    <div id="session_footer">
+        <p class="text-muted">Currently, there
+            {% if nSessions %}
+                {% if nSessions > 1 %}are{% else %}is{% endif %}
+                {{ nSessions }} active session{% if nSessions > 1 %}s{% endif %}
+            {% else %}
+                No active sessions
+            {% endif %}
+                , with
+            {% if nPlayers %}
+                {{ nPlayers }} player{% if nPlayers > 1 %}s{% endif %}.
+            {% else %}
+                no players. :(
+            {% endif %}
+        </p>
+    </div>
   </div>
 </footer>
 
