--- a/project/templates/neverever/play.html
+++ b/project/templates/neverever/play.html
@@ -42,11 +42,19 @@
     {% else %}
         <div id="answer_zone">
         <form id="answer_form" method="post" action="/play/">
-            {% for form in forms %}
+            {% for form, player in formlist %}
                 {% csrf_token %}
                 {% for field in form.visible_fields %}
                 <div class="container row-spacing">
-                    <span class="player-name">Player X</span>
+                    <span class="player-name">
+                        {% if player.name != null %} 
+                            {{ player.name }}
+                        {% else %}
+                            <div class="editable_name" contenteditable = "true" data-playernum="{{ player.stamp }}">
+                                    player{{ player.stamp }}, write your name here
+                            </div>
+                        {% endif %}
+                    </span>
                     <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox" data-toggle="toggle" data-on="Done it!" data-off="Nope." data-onstyle="success" data-offstyle="danger">
                 </div>
                 {% endfor %}
