--- a/project/templates/neverever/playSummary.html
+++ b/project/templates/neverever/playSummary.html
@@ -33,7 +33,7 @@
         <br /><b>Answers</b><br />
         {% for answers in player_answers %}
             {% for answer in answers %}
-                {{ answer.player }} answered {{ answer.answer }} for "{{ answer.statement }}" <br />
+                {{ answer.player.name }} answered {{ answer.answer }} for "{{ answer.statement }}" <br />
             {% endfor %}
         {% endfor %}
     {% endif %}
