--- a/project/templates/neverever/play.html
+++ b/project/templates/neverever/play.html
@@ -68,7 +68,9 @@
 
     <div class="container-fluid">
             <div class="row row-spacing">
-                <button id="add_button" class="btn btn-info" type="button">Add Player</button>
+                {% if nPlayers < 5 %}
+                    <button id="add_button" class="btn btn-info" type="button">Add Player</button>
+                {% endif %}
                 <a href="{% url 'play_options' %}" class="btn btn-info">Options</a>
                 <a href="{% url 'play_summary' %}" class="btn btn-warning">End Game</a>
             </div>
