--- a/static/css/index.css
+++ b/static/css/index.css
@@ -13,3 +13,13 @@ body{
     padding: 15px 0 20px 0;
     background-color:rgba(51,51,51,0.6);
 }
+
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding-top: 10px;
+  border-top: 1px solid #999999;
+  height: 45px;
+  background-color: #f5f5f5;
+}
