--- a/templates/neverever/sessionFooter.html
+++ b/templates/neverever/sessionFooter.html
@@ -1,4 +1,5 @@
-<p class="text-muted">Currently, there
+<p class="text-muted">
+    Currently, there
     {% if nSessions %}
         {% if nSessions > 1 %}are{% else %}is{% endif %}
         {{ nSessions }} active session{% if nSessions > 1 %}s{% endif %}
@@ -7,8 +8,10 @@
     {% endif %}
         , with
     {% if nPlayers %}
-        {{ nPlayers }} player{% if nPlayers > 1 %}s{% endif %}.
+        {{ nPlayers }} player{% if nPlayers > 1 %}s{% endif %}
     {% else %}
-        no players. :(
+        no players
     {% endif %}
+    <!-- loading animation -->
+    <span class="one">.</span><span class="two">.</span><span class="three">.</span>​
 </p>
