--- a/templates/neverever/about.html
+++ b/templates/neverever/about.html
@@ -49,7 +49,7 @@
                         </address>
                     </td>
 
-                    <td class="team-img"><img src="{% static "img/portraits/g_g.jpg" %}" alt="GG"></td>
+                    <td class="team-img"><img src="{% static "img/portraits/tvz.jpg" %}" alt="Tomás van Zeller"></td>
                     <td class="team-text">
                         <address>
                             <br><strong>Tomás van Zeller</strong><br>
