--- a/templates/neverever/about.html
+++ b/templates/neverever/about.html
@@ -25,7 +25,7 @@
                     <td class="team-text">
                         <address>
                             <br><strong>Giorgos Goulos</strong><br>
-                            MSc Computer Science<br>
+                            MSc Computing Science<br>
                             <a href="mailto:2156043g@student.gla.ac.uk">2156043g@student.gla.ac.uk</a>
                         </address>
                     </td>
