changed end game button to final stats page, and submit to end game. I think with some stylistic changes this should be ok, no?

--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -72,7 +72,7 @@
                     <button id="add_button" class="btn btn-info" type="button">Add Player</button>
                 {% endif %}
                 <a href="{% url 'play_options' %}" class="btn btn-info">Options</a>
-                <a href="{% url 'play_summary' %}" class="btn btn-warning">End Game</a>
+                <a href="{% url 'play_summary' %}" class="btn btn-warning">Final Stats Page</a>
             </div>
     </div>
 
