testing other toggles

--- a/templates/neverever/about.html
+++ b/templates/neverever/about.html
@@ -67,12 +67,12 @@
     Pro impetus oblique comprehensam eu, per ad erat vidit. Pri at
     fastidii mediocrem, usu et vero nulla laudem, nec an impetus convenire hendrerit.
     Elitr nobis mediocritatem eu mea, et eirmod equidem inciderint vim. Et sit cibo labore quaerendum,
-    eu tollit consulatu nam, vel sale primis ei.</p>
+    eu tollit consulatu nam, vel sale primis ei.</p><br>
         <address>
-          <strong>Twitter, Inc.</strong><br>
-          795 Folsom Ave, Suite 600<br>
-          San Francisco, CA 94107<br>
-          <abbr title="Phone">P:</abbr> (123) 456-7890
+          <strong>University <i>of</i> Glasgow</strong><br>
+          Glasgow, G12 8QQ<br>
+          Scotland<br>
+          <abbr title="Link to Glasgow University Website">Link:</abbr> <a href="http://www.gla.ac.uk/">www.gla.ac.uk</a>
         </address>
     </div>
 
