--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -33,7 +33,7 @@
                 {% if nSessions > 1 %}are{% else %}is{% endif %}
                 {{ nSessions }} active session{% if nSessions > 1 %}s{% endif %}
             {% else %}
-                No active sessions
+                are no active sessions
             {% endif %}
                 , with
             {% if nPlayers %}
