--- a/templates/neverever/playSummary.html
+++ b/templates/neverever/playSummary.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 
-{% block title %} - Game Summary{% endblock %}
+{% block title %} - summary{% endblock %}
 
 {% block body_block %}
 
