--- a/templates/neverever/baseTemplate.html
+++ b/templates/neverever/baseTemplate.html
@@ -17,7 +17,6 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="{% static "css/bootstrap.css" %}" />
 	<link rel="stylesheet" href="{% static "css/neverever.css" %}" />
-    <link rel="stylesheet" href="{% static "css/bootstrap-toggle.min.css" %}" >
 
     {% block head_block %}{% endblock %}
 
@@ -59,11 +58,9 @@
 	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-	<script src="{% static "js/bootstrap.min.js" %}"></script>
-	<!-- Toggle -->
-	<script src="{% static "js/bootstrap-toggle.min.js" %}"></script>
+	<script src="{% static "js/bootstrap.js" %}"></script>
     <!-- AJAX -->
     <script src="{% static "js/neverever-ajax.js" %}"></script>
   </body>
