--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -2,6 +2,13 @@
 
 {% load staticfiles %}
 
+{% block head_block %}
+    <link rel="stylesheet" href="{% static "css/bootstrap-switch.min.css" %}" />
+    <link rel="stylesheet" href="{% static "css/bootstrap-switch.css" %}" />
+{% endblock %}
+
+{% block title %} - play{% endblock %}
+
 {% block body_block %}
     {% if sid %}
         {% if statement %}
@@ -55,7 +62,7 @@
                             </div>
                         {% endif %}
                     </span>
-                    <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox" data-toggle="toggle" data-on="Done it!" data-off="Nope." data-onstyle="success" data-offstyle="danger">
+                    <input id="{{ field.auto_id }}" name="{{ field.html_name }}" type="checkbox">
                 </div>
                 {% endfor %}
             {% endfor %}
@@ -75,5 +82,12 @@
                 <a href="{% url 'play_summary' %}" class="btn btn-warning">Final Stats Page</a>
             </div>
     </div>
-
+<input type="checkbox" name="test" id="test" checked>
+<script>
+    $("[name='test']").bootstrapSwitch();
+    $('#test').bootstrapSwitch('setDisabled', true);
+</script>
+    <!-- Switch -->
+    <script src="{% static "js/bootstrap-switch.min.js" %}"></script>
+    <script src="{% static "js/bootstrap-switch.js" %}"></script>
 {% endblock %}
