--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -2,6 +2,10 @@
 
 {% load staticfiles %}
 
+{% block head_block %}
+    <link rel="stylesheet" href="{% static "css/bootstrap-switch.css" %}" />
+{% endblock %}
+
 {% block title %} - play{% endblock %}
 
 {% block body_block %}
@@ -19,15 +23,9 @@
                         {% endif %}
 
                         <!--below section adds in the like button-->
-                        <p>
-                            <strong id="like_count">{{ statement.likes }}</strong> people like this Statement
-
-                            <button id="likes" data-title="{{statement.title}}" class="btn btn-primary" type="button">
-                            <span class="glyphicon glyphicon-thumbs-up"></span>
-                            Like
-                            </button>
-                        </p>
-
+                        <button id="likes" data-title="{{statement.title}}" class="btn btn-primary" type="button">
+                            <span class="glyphicon glyphicon-thumbs-up"></span> Like
+                        </button>
                     </h6>
                 </div>
             </div>
@@ -77,5 +75,10 @@
                 <a href="{% url 'play_summary' %}" class="btn btn-warning">Final Stats Page</a>
             </div>
     </div>
+{% endblock %}
 
+{% block footer_block %}
+    <!-- Switch -->
+    <script src="{% static "js/bootstrap-switch.js" %}"></script>
+    <script>$('input:checkbox').bootstrapSwitch();</script>
 {% endblock %}
