--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -14,19 +14,17 @@
             <div class="container">
                 <h2>Never have I ever <b>{{ statement.title }}</b></h2>
                 <div class="row label-spacing">
-                    <h6>
-                        {% for cat in statement.categories.all %}
-                          <div class="label  label-default">{{ cat.name }}</div>
-                        {% endfor %}
-                        {% if statement.nsfw %}
-                            <div class="label  label-warning">NSFW</div>
-                        {% endif %}
+                    {% for cat in statement.categories.all %}
+                      <div class="label label-default lbl-lg">{{ cat.name }}</div>
+                    {% endfor %}
+                    {% if statement.nsfw %}
+                        <div class="label label-warning">NSFW</div>
+                    {% endif %}
 
-                        <!--below section adds in the like button-->
-                        <button id="likes" data-title="{{statement.title}}" class="btn btn-primary" type="button">
-                            <span class="glyphicon glyphicon-thumbs-up"></span> Like
-                        </button>
-                    </h6>
+                    <!--below section adds in the like button-->
+                    <button id="likes" data-title="{{statement.title}}" class="btn btn-info btn-xs" type="button">
+                        <span class="glyphicon glyphicon-thumbs-up"></span> Like
+                    </button>
                 </div>
             </div>
         {% endif %}
