--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -50,8 +50,9 @@
                         {% if player.name != null %} 
                             {{ player.name }}
                         {% else %}
-                            <div class="editable_name" contenteditable = "true" data-playernum="{{ player.stamp }}">
-                                    player{{ player.stamp }}, write your name here
+                            <div class="editable_name" contenteditable = "false" data-playernum="{{ player.stamp }}" data-toggle="popover" title="what's your name?"
+                            data-content="Click to enter your name, then press return to save!" data-trigger="hover">
+                                    player {{ player.stamp }}
                             </div>
                         {% endif %}
                     </span>
