--- a/templates/neverever/about.html
+++ b/templates/neverever/about.html
@@ -30,7 +30,7 @@
                         </address>
                     </td>
 
-                    <td class="team-img"><img src="{% static "img/portraits/g_g.jpg" %}" alt="GG"></td>
+                    <td class="team-img"><img src="{% static "img/portraits/l_m.jpg" %}" alt="Luke McPhee"></td>
                     <td class="team-text">
                         <address>
                             <br><strong>Luke McPhee</strong><br>
