--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -48,7 +48,7 @@
                         {% if player.name != null %} 
                             {{ player.name }}
                         {% else %}
-                            <div class="editable_name" contenteditable = "false" data-playernum="{{ player.stamp }}" data-toggle="popover" title="what's your name?"
+                            <div class="editable_name" contenteditable="false" data-playernum="{{ player.stamp }}" data-toggle="popover" title="What's your name?"
                             data-content="Click to enter your name, then press return to save!" data-trigger="hover" data-placement="top">
                                     player {{ player.stamp }}
                             </div>
