--- a/static/css/neverever.css
+++ b/static/css/neverever.css
@@ -16,15 +16,19 @@ h1 {
 }
 
 .lead {
-    padding-bottom: 25px;
+    padding-bottom: 20px;
 }
 
 .row-spacing {
-  padding: 10px 0 10px 0;
+  padding: 10px 0 30px 0;
 }
 
 .row-spacing-top {
   padding: 20px 0 5px 0;
+}
+
+.row-spacing-bottom {
+  padding: 40px 0 30px 0;
 }
 
 .label-spacing {
@@ -41,13 +45,14 @@ h1 {
 }
 
 .new-statement {
-  width: 35%;
-  min-width: 330px;
+  width: 100%;
+
 }
 
 .add-container {
   width: 50%;
-  min-width: 330px;
+  min-width: 300px;
+  max-width: 400px;
   margin: 0 auto;
 }
 
@@ -59,20 +64,38 @@ h1 {
   align-items: center;
 }
 
-table {
+.team-box {
+    display: inline-block;
     margin-left: auto;
     margin-right: auto;
-}
-
-td {
-    padding: 10px;
+    width: 310px;
+    margin: 5px 0;
 }
 
 .team-img {
+    float: left;
     width: 100px;
     height: 133px;
 }
 
 .team-text {
-    width: 250px;
+    float:right;
+    text-align: left;
+    width: 200px;
+    padding-top: 30px;
+}
+
+#UofGadress {
+    padding-top: 15px;
+}
+
+#sub-heading h2, h4 {
+    display: inline;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+#sub-heading {
+    padding-top: 25px;
+    padding-bottom: 10px;
 }
