--- a/templates/neverever/about.html
+++ b/templates/neverever/about.html
@@ -6,78 +6,99 @@
 
 {% block body_block %}
     <h1>about us</h1>
-    <div class="container"><p>Lorem ipsum dolor sit amet, ius vitae fuisset cu.
-    Pro impetus oblique comprehensam eu, per ad erat vidit. Pri at
-    fastidii mediocrem, usu et vero nulla laudem, nec an impetus convenire hendrerit.
-    Elitr nobis mediocritatem eu mea, et eirmod equidem inciderint vim. Et sit cibo labore quaerendum,
-    eu tollit consulatu nam, vel sale primis ei.</p></div>
+    <p class="lead">A bit of information on the developers and the project itself.</p>
 
-    <h2>the team</h2>
+    <div id="sub-heading">
+        <h4><span class="glyphicon glyphicon-folder-open"></span></h4>
+        <h2>the project</h2>
+    </div>
+    <div class="container"><p><a href="https://github.com/Redfielder/NeverEver">GitHub</a>
+    <a href="http://www.tangowithdjango.com/">Tango with Django</a>
+    <a href="https://www.pythonanywhere.com/">PythonAnywhere</a>
+    <a href="http://getbootstrap.com/">Bootstrap</a>
+    <a href="http://www.bootstrap-switch.org/">(unofficial) Bootstrap Switch</a></p></div>
+
+    <div id="sub-heading">
+        <h4><span class="glyphicon glyphicon-user"></span></h4>
+        <h2>the team</h2>
+    </div>
     <div class="container"><p>Lorem ipsum dolor sit amet, ius vitae fuisset cu.
     Pro impetus oblique comprehensam eu, per ad erat vidit. Pri at
     fastidii mediocrem, usu et vero nulla laudem, nec an impetus convenire hendrerit.
     Elitr nobis mediocritatem eu mea, et eirmod equidem inciderint vim. Et sit cibo labore quaerendum,
     eu tollit consulatu nam, vel sale primis ei.</p>
         <div class="container">
-            <table class="text-left">
-                <tr>
-                    <td class="team-img"><img src="{% static "img/portraits/g_g.jpg" %}" alt="Giorgos Goulos"></td>
-                    <td class="team-text">
-                        <address>
-                            <br><strong>Giorgos Goulos</strong><br>
-                            MSc Computing Science<br>
-                            <a href="mailto:2156043g@student.gla.ac.uk">2156043g@student.gla.ac.uk</a>
-                        </address>
-                    </td>
-
-                    <td class="team-img"><img src="{% static "img/portraits/l_m.jpg" %}" alt="Luke McPhee"></td>
-                    <td class="team-text">
-                        <address>
-                            <br><strong>Luke McPhee</strong><br>
-                            MSc Information Technology<br>
-                            <a href="mailto:0705986m@student.gla.ac.uk">0705986m@student.gla.ac.uk</a>
-                        </address>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="team-img"><img src="{% static "img/portraits/r_r.jpg" %}" alt="Raoul Rothfeld"></td>
-                    <td class="team-text">
-                        <address>
-                            <br><strong>Raoul Rothfeld</strong><br>
-                            MSc Information Technology<br>
-                            <a href="mailto:2164502r@student.gla.ac.uk">2164502r@student.gla.ac.uk</a>
-                        </address>
-                    </td>
-
-                    <td class="team-img"><img src="{% static "img/portraits/tvz.jpg" %}" alt="Tomás van Zeller"></td>
-                    <td class="team-text">
-                        <address>
-                            <br><strong>Tomás van Zeller</strong><br>
-                            MSc Information Technology<br>
-                            <a href="mailto:2125918v@student.gla.ac.uk">2125918v@student.gla.ac.uk</a>
-                        </address>
-                    </td>
-                </tr>
-            </table>
+            <div class="team-box">
+                <div class="team-img"><img src="{% static "img/portraits/g_g.jpg" %}" alt="Giorgos Goulos"></div>
+                <div class="team-text">
+                    <address>
+                        <strong>Giorgos Goulos</strong><br>
+                        MSc Computing Science<br>
+                        <a href="mailto:2156043g@student.gla.ac.uk">2156043g@student.gla.ac.uk</a>
+                    </address>
+                </div>
+            </div>
+            <div class="team-box">
+                <div class="team-img"><img src="{% static "img/portraits/l_m.jpg" %}" alt="Luke McPhee"></div>
+                <div class="team-text">
+                    <address>
+                        <strong>Luke McPhee</strong><br>
+                        MSc Information Technology<br>
+                        <a href="mailto:0705986m@student.gla.ac.uk">0705986m@student.gla.ac.uk</a>
+                    </address>
+                </div>
+            </div>
+            <br>
+            <div class="team-box">
+                <div class="team-img"><img src="{% static "img/portraits/r_r.jpg" %}" alt="Raoul Rothfeld"></div>
+                <div class="team-text">
+                    <address>
+                        <strong>Raoul Rothfeld</strong><br>
+                        MSc Information Technology<br>
+                        <a href="mailto:2164502r@student.gla.ac.uk">2164502r@student.gla.ac.uk</a>
+                    </address>
+                </div>
+            </div>
+            <div class="team-box">
+                <div class="team-img"><img src="{% static "img/portraits/tvz.jpg" %}" alt="Tomás van Zeller"></div>
+                <div class="team-text">
+                    <address>
+                        <strong>Tomás van Zeller</strong><br>
+                        MSc Information Technology<br>
+                        <a href="mailto:2125918v@student.gla.ac.uk">2125918v@student.gla.ac.uk</a>
+                    </address>
+                </div>
+            </div>
         </div>
     </div>
 
-    <h2>the university</h2>
+    <div id="sub-heading">
+        <h4><span class="glyphicon glyphicon-education"></span></h4>
+        <h2>the university</h2>
+    </div>
     <div class="container"><p>Lorem ipsum dolor sit amet, ius vitae fuisset cu.
     Pro impetus oblique comprehensam eu, per ad erat vidit. Pri at
     fastidii mediocrem, usu et vero nulla laudem, nec an impetus convenire hendrerit.
     Elitr nobis mediocritatem eu mea, et eirmod equidem inciderint vim. Et sit cibo labore quaerendum,
-    eu tollit consulatu nam, vel sale primis ei.</p><br>
-        <address>
-          <strong>University <i>of</i> Glasgow</strong><br>
-          Glasgow, G12 8QQ<br>
-          Scotland<br>
-          <abbr title="Link to Glasgow University Website">Link:</abbr> <a href="http://www.gla.ac.uk/">www.gla.ac.uk</a>
-        </address>
+    eu tollit consulatu nam, vel sale primis ei.</p>
+
+        <div class="container">
+            <div class="team-box">
+                <div class="team-img"><img src="{% static "img/UofG.jpg" %}" alt="University of Glasgow"></div>
+                <div class="team-text" id="UofGadress">
+                    <address>
+                      <strong>University <i>of</i> Glasgow</strong><br>
+                      Glasgow, G12 8QQ<br>
+                      Scotland<br><br>
+                      <abbr title="Link to Glasgow University Website">Link:</abbr> <a href="http://www.gla.ac.uk/">www.gla.ac.uk</a>
+                    </address>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div class="container">
-        <div class="row row-spacing">
+        <div class="row row-spacing-bottom">
             <a href="{% url 'index' %}" class="btn btn-default btn-ne-add">Return to Main Page</a>
         </div>
     </div>
