--- a/templates/neverever/playOptions.html
+++ b/templates/neverever/playOptions.html
@@ -17,12 +17,18 @@
 
         {% for field in form.visible_fields %}
             {% if field.name == "nsfw" %}
-                <h2>enable adult content</h2>
+                <div id="sub-heading">
+                    <h4><span class="glyphicon glyphicon-eye-open"></span></h4>
+                    <h2>enable adult content</h2>
+                </div>
                 Enable NSFW (adult content) statements:
                 {{ field }}
             {% endif %}
             {% if field.name == "categories" %}
-                <h2>select categories</h2>
+                <div id="sub-heading">
+                    <h4><span class="glyphicon glyphicon-tags"></span></h4>
+                    <h2>select categories</h2>
+                </div>
                 {{ field }}
             {% endif %}
 
