--- a/templates/neverever/answerButtons.html
+++ b/templates/neverever/answerButtons.html
@@ -7,9 +7,9 @@
                 {% if player.name != null %} 
                     {{ player.name }}
                 {% else %}
-                    <div class="editable_name" contenteditable = "false" data-playernum="{{ player.stamp }}" data-toggle="popover" title="what's your name?"
+                    <div class="editable_name" contenteditable="false" data-playernum="{{ player.stamp }}" data-toggle="popover" title="What's your name?"
                     data-content="Click to enter your name, then press return to save!" data-trigger="hover" data-placement="top">
-                            player {{ player.stamp }}
+                            Player {{ player.stamp }} <span class="glyphicon glyphicon-pencil weak-glyph"></span>
                     </div>
                 {% endif %}
             </span>
