--- a/static/css/index.css
+++ b/static/css/index.css
@@ -27,3 +27,21 @@ body{
   height: 45px;
   background-color: #f5f5f5;
 }
+
+#cookie_box {
+	position: fixed;
+	display: none;
+	bottom: 45px;
+	font-size: 0.8em;
+	z-index: 1000;
+    background-color:rgba(51,51,51,0.8);
+	padding:5px;
+	text-align:center;
+	width:100%;
+	color:#ffffff;
+}
+
+#cookie_box a:hover {
+    color:#ffffff;
+    text-decoration: underline
+}
