--- a/templates/neverever/index.html
+++ b/templates/neverever/index.html
@@ -54,6 +54,8 @@
 {% endblock %}
 
 {% block footer_block %}
+    <!-- AJAX -->
+    <script src="{% static "js/neverever-index-ajax.js" %}"></script>
     <!-- Cookie Crap -->
     <script src="{% static "js/cookienote.js" %}"></script>
 {% endblock %}
