--- a/templates/neverever/play.html
+++ b/templates/neverever/play.html
@@ -75,6 +75,8 @@
 {% endblock %}
 
 {% block footer_block %}
+    <!-- AJAX -->
+    <script src="{% static "js/neverever-ajax.js" %}"></script>
     <!-- Switch -->
     <script src="{% static "js/bootstrap-switch.js" %}"></script>
     <script>$('input:checkbox').bootstrapSwitch();</script>
