--- a/templates/neverever/baseTemplate.html
+++ b/templates/neverever/baseTemplate.html
@@ -33,7 +33,8 @@
 	<div class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
-          <a href="../" class="navbar-brand">never/<b>ever</b></a>
+          <!-- ref changed to go up two levels as play options is stacked in play and would otherwise not go to home -->
+          <a href="../../" class="navbar-brand">never/<b>ever</b></a>
           <button class="navbar-toggle collapsed" type="button" data-toggle="collapse" data-target="#navbar-main" aria-expanded="false">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -64,8 +65,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="{% static "js/bootstrap.js" %}"></script>
-    <!-- AJAX -->
-    <script src="{% static "js/neverever-ajax.js" %}"></script>
     <!-- Page specific scripts -->
     {% block footer_block %}{% endblock %}
   </body>
